--- a/style.css
+++ b/style.css
@@ -74,11 +74,11 @@ section
 }
 section:nth-child((2n+1))
 {
-    background-color: white
+    background-color:white;
 }
 section:nth-child(2n)
 {
-    background-color: lightgray;
+    background-color:lightgray; 
 }
 
 
@@ -93,4 +93,18 @@ section:nth-child(2n)
     width: 220px;
     height: 220px;
     border-radius: 50%;
+}
+#about-para
+{
+    margin: 1rem 7rem 1rem;
+    color: grey;
+    font-size: 1.5rem;
+    text-align: justify;
+}
+
+
+/* common margin */
+.mb75px
+{
+    margin-bottom: 75px;
 }
